// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Pagination Example with both 1`] = `
.emotion-21 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.4;
  color: #000000;
}

.emotion-20 {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

.emotion-3 {
  display: inline-block;
  padding: 12px;
}

.emotion-2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-1 svg {
  display: inline-block;
}

.emotion-5 {
  opacity: 0.5;
  font-size: 14px;
  display: inline-block;
  padding: 12px;
}

.emotion-10 {
  color: #924A8B;
  font-size: 16px;
  display: inline-block;
  padding: 12px;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0.75turn);
  -ms-transform: rotate(0.75turn);
  transform: rotate(0.75turn);
  height: 0.875rem;
  width: 0.875rem;
  fill: #000000;
}

.emotion-16 {
  display: block;
  -webkit-transform: rotate(0.25turn);
  -ms-transform: rotate(0.25turn);
  transform: rotate(0.25turn);
  height: 0.875rem;
  width: 0.875rem;
  fill: #000000;
}

<div
  className="emotion-21"
>
  <ul
    className="emotion-20"
  >
    <li
      className="emotion-3"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="emotion-5"
    >
      ...
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/4"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="emotion-10"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/5"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/6"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="emotion-5"
    >
      ...
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        10
      </a>
    </li>
    <li
      className="emotion-3"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-16"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Pagination Example with href 1`] = `
.emotion-21 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.4;
  color: #000000;
}

.emotion-20 {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

.emotion-3 {
  display: inline-block;
  padding: 12px;
}

.emotion-2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-1 svg {
  display: inline-block;
}

.emotion-5 {
  opacity: 0.5;
  font-size: 14px;
  display: inline-block;
  padding: 12px;
}

.emotion-10 {
  color: #924A8B;
  font-size: 16px;
  display: inline-block;
  padding: 12px;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0.75turn);
  -ms-transform: rotate(0.75turn);
  transform: rotate(0.75turn);
  height: 0.875rem;
  width: 0.875rem;
  fill: #000000;
}

.emotion-16 {
  display: block;
  -webkit-transform: rotate(0.25turn);
  -ms-transform: rotate(0.25turn);
  transform: rotate(0.25turn);
  height: 0.875rem;
  width: 0.875rem;
  fill: #000000;
}

<div
  className="emotion-21"
>
  <ul
    className="emotion-20"
  >
    <li
      className="emotion-3"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="emotion-5"
    >
      ...
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/4"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="emotion-10"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/5"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/6"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="emotion-5"
    >
      ...
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        10
      </a>
    </li>
    <li
      className="emotion-3"
    >
      <a
        className="emotion-2"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-16"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Pagination Example with onClick 1`] = `
.emotion-21 {
  font-family: 'Open Sans',-apple-system,sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.4;
  color: #000000;
}

.emotion-20 {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}

.emotion-3 {
  display: inline-block;
  padding: 12px;
}

.emotion-2 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-1 svg {
  display: inline-block;
}

.emotion-5 {
  opacity: 0.5;
  font-size: 14px;
  display: inline-block;
  padding: 12px;
}

.emotion-10 {
  color: #924A8B;
  font-size: 16px;
  display: inline-block;
  padding: 12px;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0.75turn);
  -ms-transform: rotate(0.75turn);
  transform: rotate(0.75turn);
  height: 0.875rem;
  width: 0.875rem;
  fill: #000000;
}

.emotion-16 {
  display: block;
  -webkit-transform: rotate(0.25turn);
  -ms-transform: rotate(0.25turn);
  transform: rotate(0.25turn);
  height: 0.875rem;
  width: 0.875rem;
  fill: #000000;
}

<div
  className="emotion-21"
>
  <ul
    className="emotion-20"
  >
    <li
      className="emotion-3"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="emotion-5"
    >
      ...
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="emotion-10"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="emotion-5"
    >
      ...
    </li>
    <li
      className="emotion-5"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        10
      </a>
    </li>
    <li
      className="emotion-3"
    >
      <a
        className="emotion-2"
        onClick={[Function]}
      >
        <span
          className="emotion-1"
        >
          <svg
            className="emotion-16"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
  </ul>
</div>
`;
